--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "angular-svg-icon": "^14.0.0",
     "apexcharts": "^3.36.3",
     "ng-apexcharts": "^1.7.4",
+    "ngx-page-scroll": "^10.0.0",
+    "ngx-page-scroll-core": "^10.0.0",
     "precss": "^2.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
